# list-backup

./: Cargo.toml  README.md
src/: anilist_queries.rs  config.rs  main.rs  mal_queries.rs  queries.rs  save_to_file.rs
