[package]
name = "list-backup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dotenv = "0.15.0"
home = "0.5.3"
reqwest = { version = "0.11.4", features =["json"] }
rocket = { version = "0.5.0-rc.1" }
serde = "1.0.130"
serde_json ="1.0.68"
toml = "0.5.8"
